# DiceRoller-Pro

./: CMakeLists.txt  DiceRoller-Pro_en.ts  DiceRoller-Pro_es.ts  DiceRoller-Pro_fr.ts  DiceRoller-Pro_ko.ts  LICENSE  README.md  diceroll.cpp  diceroll.hpp  dicewidget.cpp  dicewidget.hpp  dicewidget.ui  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
